--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ uvicorn = "^0.32.0"
 uvloop = "^0.21.0"
 watchfiles = "^0.24.0"
 websockets = "^13.1"
+pymongo = "^4.10.1"
 
 [build-system]
 requires = ["poetry-core"]
