Backend url dynamic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ uvloop = "^0.21.0"
 watchfiles = "^0.24.0"
 websockets = "^13.1"
 pymongo = "^4.10.1"
+aiohttp = "^3.11.2"
 
 [tool.poetry.scripts]
 dev = "uvicorn index:app --reload"
