--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+aiohappyeyeballs==2.4.3 ; python_version >= "3.12" and python_version < "4.0"
+aiohttp==3.11.2 ; python_version >= "3.12" and python_version < "4.0"
+aiosignal==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 anyio==4.6.2.post1 ; python_version >= "3.12" and python_version < "4.0"
+attrs==24.2.0 ; python_version >= "3.12" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.12" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
@@ -12,6 +16,7 @@ duckduckgo-search==6.3.4 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
 fastapi==0.115.4 ; python_version >= "3.12" and python_version < "4.0"
+frozenlist==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 gitdb==4.0.11 ; python_version >= "3.12" and python_version < "4.0"
 gitpython==3.1.43 ; python_version >= "3.12" and python_version < "4.0"
 greenlet==3.1.1 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
@@ -25,12 +30,14 @@ jiter==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
+multidict==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.1.3 ; python_version >= "3.12" and python_version < "4.0"
 ollama==0.3.3 ; python_version >= "3.12" and python_version < "4.0"
 openai==1.54.3 ; python_version >= "3.12" and python_version < "4.0"
 pgvector==0.3.6 ; python_version >= "3.12" and python_version < "4.0"
 phidata==2.5.31 ; python_version >= "3.12" and python_version < "4.0"
 primp==0.6.5 ; python_version >= "3.12" and python_version < "4.0"
+propcache==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
 psycopg==3.2.3 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -61,3 +68,4 @@ uvicorn[standard]==0.32.0 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; python_version >= "3.12" and python_version < "4.0"
 watchfiles==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
 websockets==13.1 ; python_version >= "3.12" and python_version < "4.0"
+yarl==1.17.1 ; python_version >= "3.12" and python_version < "4.0"
