--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -55,6 +55,8 @@ watchfiles = "^0.24.0"
 websockets = "^13.1"
 pymongo = "^4.10.1"
 aiohttp = "^3.11.2"
+qdrant-client = "^1.12.1"
+pypdf = "^5.1.0"
 
 [tool.poetry.scripts]
 dev = "uvicorn index:app --reload"
