--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,10 +20,16 @@ frozenlist==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 gitdb==4.0.11 ; python_version >= "3.12" and python_version < "4.0"
 gitpython==3.1.43 ; python_version >= "3.12" and python_version < "4.0"
 greenlet==3.1.1 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
+grpcio-tools==1.68.0 ; python_version >= "3.12" and python_version < "4.0"
+grpcio==1.68.0 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
+h2==4.1.0 ; python_version >= "3.12" and python_version < "4.0"
+hpack==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.6 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
+httpx[http2]==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
+hyperframe==6.0.1 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
 jiter==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -33,11 +39,13 @@ mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 multidict==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.1.3 ; python_version >= "3.12" and python_version < "4.0"
 ollama==0.3.3 ; python_version >= "3.12" and python_version < "4.0"
-openai==1.54.3 ; python_version >= "3.12" and python_version < "4.0"
+openai==1.54.5 ; python_version >= "3.12" and python_version < "4.0"
 pgvector==0.3.6 ; python_version >= "3.12" and python_version < "4.0"
-phidata==2.5.31 ; python_version >= "3.12" and python_version < "4.0"
+phidata==2.5.32 ; python_version >= "3.12" and python_version < "4.0"
+portalocker==2.10.1 ; python_version >= "3.12" and python_version < "4.0"
 primp==0.6.5 ; python_version >= "3.12" and python_version < "4.0"
 propcache==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
+protobuf==5.28.3 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
 psycopg==3.2.3 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -45,11 +53,15 @@ pydantic-settings==2.6.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
 pymongo==4.10.1 ; python_version >= "3.12" and python_version < "4.0"
+pypdf==5.1.0 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 python-multipart==0.0.17 ; python_version >= "3.12" and python_version < "4.0"
+pywin32==308 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
+qdrant-client==1.12.1 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==75.5.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 smmap==5.0.1 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
