--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@fontsource/inter": "^5.0.17",
     "@fontsource/montserrat": "^5.0.17",
+    "@tanstack/react-query": "^5.62.2",
+    "@uidotdev/usehooks": "^2.4.1",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.0.8",
+    "immer": "^10.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
